@@ -1,8 +1,8 @@
 Package: quanteda
 Type: Package
 Title: Quantitative Analysis of Textual Data
-Version: 0.5.4
-Date: 2014-10-02
+Version: 0.5.4.001
+Date: 2014-10-06
 Authors@R: c(
     person("Benoit", "Kenneth", email = "kbenoit@lse.ac.uk", role = "cre"),
     person("Nulty", "Paul", email = "paul.nulty@gmail.com", role = "aut"))
