@@ -20,6 +20,8 @@ S3method(kwic,character)
 S3method(kwic,corpus)
 S3method(ndoc,corpus)
 S3method(ndoc,dfm)
+S3method(nresample,corpus)
+S3method(nresample,dfm)
 S3method(plot,dfm)
 S3method(print,corpus)
 S3method(print,dfm)
@@ -77,6 +79,7 @@ export(metacorpus)
 export(metadoc)
 export(ndoc)
 export(ngrams)
+export(nresample)
 export(readWStatDict)
 export(resample)
 export(segment)
